--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,16 @@
   },
   "devDependencies": {},
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^19.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "dotenv": "^8.2.0",
     "fs": "^0.0.1-security",
     "knex": "<0.20.0",
     "path": "^0.12.7",
     "pg": "^8.0.3",
     "rimraf": "^3.0.1",
-    "sqlite3": "latest",
+    "sharp": "^0.25.2",
+    "sqlite3": "^4.2.0",
     "strapi": "3.0.0-beta.20",
     "strapi-admin": "3.0.0-beta.20",
     "strapi-connector-bookshelf": "3.0.0-beta.20",
